--- a/css/base.css
+++ b/css/base.css
@@ -55,7 +55,6 @@ h3 {
 }
 
 h4 {
-  font-style: italic;
   margin-bottom: .25em;
 }
 
@@ -103,16 +102,12 @@ pre * {
   color: #064644;
 }
 
-.inline-code {
-  font-family: "Roboto Mono", monospace;
-  color: rgb(204, 76, 20);
-  padding: 0 .2em;
-  margin: 0;
-}
-
 code {
   font-family: "Roboto Mono", monospace;
-  color: rgb(117, 71, 51);
+  color: rgb(42, 77, 68);
+  font-style: normal;
+  padding: 0 .2em;
+  background-color: rgba(85, 147, 153, 0.19)
 }
 
 
